# OpenPaper

./: .gitignore  README.md  algo_input_basics.html  algo_input_basics.ipynb  algo_input_basics_export.html  build.py  fixed_metadata.py  index.html  metadata.demo.json  metadata.json  output.txt  pyproject.toml  stats.html  tempCodeRunnerFile.py  template.html  waatchdog.py
_docs/: todo.md
backend/: __init__.py  __main__.py  metadata.py  server.py  speedread.py  utils.py  watcher.py
md/: DRAGIN Dynamic Retrieval Augmented Generation based on the Real-time Information Needs of Large Language Models.md  Dataflow-Guided Retrieval Augmentation for Repository-Level Code Completion.md  Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks.md  Retrieval-Augmented Generation for Textual Graph Understanding and Question Answering.md  SELF-RAG Learning to Retrieve Generate and Critique through Self-Reflection.md
scripts/: fix_metadata.py  install_autostart.ps1  start_waatchdog.vbs  uninstall_autostart.ps1
