[project]
name = "openpaper"
version = "1.0.0"
description = "A local paper management and AI speed-read tool for grad students"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "watchdog>=2.0",
]

[project.scripts]
openpaper = "backend.server:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
